[feat] 이용권 코드를 등록한 회원 목록 API
