# app/Config/Routes.php
@@ -20,3 +20,4 @@ $routes->put('/api/v1/retail_eggtv/(:num)/issues/(:num)', 'Products\EggTv\Ticket
 $routes->get('/api/v1/retail_eggtv/(:num)/issues/(:num)/codes', 'Products\EggTv\Ticket::readAllTicketCodes/$1/$2');
 $routes->put('/api/v1/retail_eggtv/(:num)/issues/(:num)/codes', 'Products\EggTv\Ticket::updateTicketCode/$1/$2');
 $routes->get('/api/v1/retail_eggtv/search', 'Products\EggTv\Ticket::searchTicketCode');
+$routes->get('/api/v1/retail_eggtv/registered', 'Products\EggTv\Ticket::registeredTicket');
